-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-panama
-
Component/s: tools
-
None
-
generic
-
generic
Panama foreign branch build fails after this hotspot change:
https://hg.openjdk.java.net/jdk/jdk/rev/15936b142f86
Macro in src/hotspot/cpu/x86/directUpcallHandler_x86.cpp has to be sync'ed with the hotspot change above.
https://hg.openjdk.java.net/jdk/jdk/rev/15936b142f86
Macro in src/hotspot/cpu/x86/directUpcallHandler_x86.cpp has to be sync'ed with the hotspot change above.
- relates to
-
JDK-8233913 Remove implicit conversion from Method* to methodHandle
-
- Resolved
-