8234172: Panama foreign branch build failure with src/hotspot/cpu/x86/directUpcallHandler_x86.cpp

Reviewed-by: mcimadamore, jvernee